@@ -79,3 +79,4 @@ remove = Path::Class::Dir
 [MinimumPerl]
 perl = 5.010001
 
+[Deprecated]
